--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "cross-env": "7.0.3",
     "dotenv": "9.0.0",
     "express": "4.17.1",
+    "http-status-codes": "^2.1.4",
     "uuid": "8.3.2"
   },
   "devDependencies": {
@@ -56,5 +57,6 @@
     "lint-staged": "10.5.4",
     "nodemon": "2.0.7",
     "prettier": "2.2.1"
-  }
+  },
+  "author": ""
 }
