--- a/package.json
+++ b/package.json
@@ -43,11 +43,14 @@
     "dotenv": "9.0.0",
     "express": "4.17.1",
     "http-status-codes": "^2.1.4",
+    "path": "^0.12.7",
     "swagger-ui-express": "^4.2.0",
     "uuid": "8.3.2",
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/uuid": "^8.3.3",
     "debug": "4.3.1",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "14.2.1",
