--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,7 @@
         "noImplicitReturns": true,
         "noFallthroughCasesInSwitch": true,
         "noUncheckedIndexedAccess": true,
+        "noPropertyAccessFromIndexSignature": true,
         "moduleResolution": "node",
         "esModuleInterop": true,
         "experimentalDecorators": true,
